WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143624
Cannot click "Next" button on Google two-factor auth setup page
https://bugs.webkit.org/show_bug.cgi?id=143624
Summary
Cannot click "Next" button on Google two-factor auth setup page
Jon Honeycutt
Reported
2015-04-10 18:25:27 PDT
When trying to enable two-factor authentication for a Google account on iOS, it is sometimes not possible to click the "Next" button to advance the process. <
rdar://problem/19175714
>
Attachments
Patch
(5.16 KB, patch)
2015-04-10 19:32 PDT
,
Jon Honeycutt
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2015-04-10 19:32:27 PDT
Created
attachment 250557
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2015-04-10 21:24:24 PDT
Comment on
attachment 250557
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=250557&action=review
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2784 > + default:
I think we should list all InputTypes here explicitly (instead of using 'default') so that new values will cause a build failure, and a will force a decision to be made by the patch author.
Darin Adler
Comment 3
2015-04-11 08:40:54 PDT
Comment on
attachment 250557
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=250557&action=review
>> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2784 >> + default: > > I think we should list all InputTypes here explicitly (instead of using 'default') so that new values will cause a build failure, and a will force a decision to be made by the patch author.
I agree. Then we can also stick an ASSERT_NOT_REACHED() after the switch (along with a second return false). Please make that change.
Jon Honeycutt
Comment 4
2015-04-13 12:53:09 PDT
Committed
r182749
: <
http://trac.webkit.org/changeset/182749
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug